dt-assets/scss/_main.scss
/* ... */
#top-bar-menu {
    margin-top: 0 !important;
    padding: 0 20px;
    z-index: 999;
    border: none;

    .logo-link {
        padding-inline-start:0;
        padding: 0;
        vertical-align: middle;
    }
    .top-bar-right {
        .dropdown.menu {
            justify-content: flex-end;
            & > li {
            margin: 0 10px;
            }
            @media screen and (max-width : 775px) {
                li {
                    margin-bottom: 0.5rem;
                }
               li:first-of-type {
                    width: 100%;
                    text-align: end;
                }
            }
        }
    }

    .dropdown.menu {
        a {
          background-color: $primary-color;
        }
        li.active > a {
            background: #005a87;
        }
    }
    .top-bar-left {
        .dropdown.menu {
            flex-wrap: nowrap;
        }
        .dropdown.menu a:hover {
            background-color: #224f72
        }
        //make dropdown caret white
        .dropdown.menu>li.is-dropdown-submenu-parent>a:after {
            border-color: #fefefe transparent transparent;
        }
        .dropdown.menu #more-menu-button {
            display: none;
        }

        @media screen and (max-width : 1040px) {
            .dropdown.menu>li:nth-child(n+4) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+4) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+3) {
                display: none;
            }
        }

        @media screen and (min-width: 1041px) and (max-width : 1140px) {
            .dropdown.menu>li:nth-child(n+6) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+6) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+5) {
                display: none;
            }
        }

        @media screen and (min-width: 1141px) and (max-width : 1240px) {
            .dropdown.menu>li:nth-child(n+7) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+7) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+6) {
                display: none;
            }
        }

        @media screen and (min-width: 1241px) and (max-width : 1300px) {
            .dropdown.menu>li:nth-child(n+8) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+8) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+7) {
                display: none;
            }
        }

        @media screen and (min-width: 1301px) and (max-width : 1400px) {
            .dropdown.menu>li:nth-child(n+9) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+9) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+8) {
                display: none;
            }
        }


        @media screen and (min-width: 1401px) and (max-width : 1600px) {
            .dropdown.menu>li:nth-child(n+9) {
                display: none;
            }
            .dropdown.menu>li:nth-child(n+9) {
                display: none;
            }
            .dropdown.menu #more-menu-button {
                display: inherit;
            }
            .dropdown.menu #more-menu-button > ul > li:nth-child(-n+8) {
                display: none;
            }
        }
    }

    a {
        font-weight: bold;
        padding: 1rem;
        color: #fefefe;
    }

    .image-menu-nav {
        img {
            height: 24px;
        }

        a {
            padding: 4px 5px;
            vertical-align: middle;
            font-weight: bold;

            span {
                vertical-align: middle;
            }
        }
    }
    //Make sure the menu bar does not expand while loading
    .submenu.menu.vertical {
        display: none;
    }

    .submenu.menu.vertical.is-dropdown-submenu.js-dropdown-active {
        display: block;
    }
}

html[dir="rtl"] #top-bar-menu {
    .dropdown.menu>li.is-dropdown-submenu-parent>a:after {
        left: 5px;
        right: auto;
    }
}

.notifications-menu-item .notification-count {
    display: none;
    vertical-align: top;
    position: relative;
    top: -5px;
    margin-left:-15px;
}
.notification-count-offcanvas {
    display: none;
    vertical-align: middle;
    position: relative;
    top: 0;
    margin-left:10px;
}
.top-bar .is-submenu-item {
    background-color: #3f729b;
    text-align: left;
    a {
        vertical-align: middle;
        color: white;
        font-weight: 700;
        img {
            width:25px; margin:0 10px 0 0
        }
    }
}

// Mobile add new dropdown styling
.mobile-add-buttons {
    margin-left: 5px;
    position: relative;
    display: inline-block;
    vertical-align: top;
}

.title-bar-right {
    float: right;
}

.title-bar-right > * {
    float: right;
    margin-left: 10px;
}
/* ... */

